--- a/about.html
+++ b/about.html
@@ -23,12 +23,14 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-        </li>
         <li class="nav-item active">
-          <a class="nav-link" href="/about.html">About</a>
+          <a class="nav-link" href="//B<\>coder/">Home <span class="sr-only">(current)</span></a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/B<\>coder/about.html">About</a>
+        </li>
+
+
 
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
@@ -45,11 +47,13 @@
           </div>
         </li>
 
+
         <li class="nav-item">
-          <a class="nav-link" href="/contact.html">Contact US</a>
+          <a class="nav-link" href="/B<\>coder/contact.html">Contact US</a>
         </li>
 
       </ul>
+
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
