--- a/about.html
+++ b/about.html
@@ -23,6 +23,7 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
+      <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
           <a class="nav-link" href="/B<\>coder/">Home <span class="sr-only">(current)</span></a>
         </li>
@@ -49,7 +50,7 @@
 
 
         <li class="nav-item">
-          <a class="nav-link" href="/B<\>coder/contact.html">Contact US</a>
+          <a class="nav-link" href="/B<\>coder/contact.html">Contact Us</a>
         </li>
 
       </ul>
